# keywarden

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  alembic.ini  ci.yml  docker-compose.yml  docker-compose.yml.example  install  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: entrypoint.sh  main.py  manage.py
app/api/: deps.py
app/api/v1/: auth.py  keys.py
app/apps/accounts/: admin.py  models.py  urls.py  views.py
app/apps/accounts/migrations/: 0001_initial.py  0002_rename_accounts_account.py  0003_alter_account_email.py  0004_delete_account.py
app/apps/audit/: admin.py  apps.py  models.py  signals.py
app/apps/audit/migrations/: 0001_initial.py  (+1 more)
app/apps/dashboard/: admin.py  context.py
app/apps/servers/: admin.py  apps.py  models.py
app/core/: config.py  security.py
app/db/: base.py  base_class.py  session.py
app/keywarden/: urls.py  wsgi.py
app/keywarden/api/: __init__.py  main.py  security.py
app/keywarden/settings/: base.py  dev.py
app/models/: access_request.py  audit.py  server.py  sshkey.py  user.py
app/templates/: base.html
app/templates/admin/: index.html
app/theme/static_src/: package-lock.json  tailwind.config.js
apps/accounts/: admin.py
apps/dashboard/: admin.py
keywarden/: urls.py
keywarden/settings/: base.py  prod.py
nginx/certs/: certificate.pem  key.pem
nginx/configs/: nginx.conf
nginx/configs/sites/: default.conf
tests/: test-health.py  test-model-import.py  test_health.py
theme/templates/unfold/: dashboard.html
(+9 files in other folders)
